lib/domains/labyrinth/gen/mudmap/target/debug/build/eyre-2f64d36b9c46cb77/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/gurba/gurba-gen/mudmap/target/debug/build/eyre-2f64d36b9c46cb77/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
